# backend/src/Chamados.Api/Models/Dtos/Chamados/FecharClienteRequest.cs
@@ -1,0 +1,6 @@
+namespace Chamados.Api.Models.Dtos.Chamados;
+
+public class FecharClienteRequest
+{
+    public string? Motivo { get; set; }
+}
